--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -9,7 +9,8 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%;
+  width: 399px;
+  border: 1px solid black;
   padding: 20px;
   text-align: center;
   background-color: teal;
